--- a/Main/Makefile.am
+++ b/Main/Makefile.am
@@ -1,5 +1,5 @@
 
-bindir = ${exec_prefix}/japhar/bin
+# bindir = ${exec_prefix}/japhar/bin
 
 bin_PROGRAMS	= fg
 fg_SOURCES	= \
@@ -12,17 +12,17 @@ fg_SOURCES	= \
 
 # Need $(INTERFACE_LIBS) $(GRAPHICS_LIBS)
 fg_LDADD	= \
-	$(top_builddir)/Src/Aircraft/libAircraft.la \
-	$(top_builddir)/Src/Astro/libAstro.la \
-	$(top_builddir)/Src/Cockpit/libCockpit.la \
-	$(top_builddir)/Src/Controls/libControls.la \
-	$(top_builddir)/Src/Flight/libFlight.la \
-	$(top_builddir)/Src/Flight/LaRCsim/libLaRCsim.la \
-	$(top_builddir)/Src/Flight/Slew/libSlew.la \
-	$(top_builddir)/Src/Scenery/libScenery.la \
-	$(top_builddir)/Src/Time/libTime.la \
-	$(top_builddir)/Src/Weather/libWeather.la \
-        $(top_builddir)/Src/Joystick/libJoystick.la \
-	$(top_builddir)/Src/Math/libMath.la
+	$(top_builddir)/Simulator/Aircraft/libAircraft.la \
+	$(top_builddir)/Simulator/Astro/libAstro.la \
+	$(top_builddir)/Simulator/Cockpit/libCockpit.la \
+	$(top_builddir)/Simulator/Controls/libControls.la \
+	$(top_builddir)/Simulator/Flight/libFlight.la \
+	$(top_builddir)/Simulator/Flight/LaRCsim/libLaRCsim.la \
+	$(top_builddir)/Simulator/Flight/Slew/libSlew.la \
+	$(top_builddir)/Simulator/Scenery/libScenery.la \
+	$(top_builddir)/Simulator/Time/libTime.la \
+	$(top_builddir)/Simulator/Weather/libWeather.la \
+        $(top_builddir)/Simulator/Joystick/libJoystick.la \
+	$(top_builddir)/Simulator/Math/libMath.la
 
 INCLUDES += -I.. -DGLUT
